--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# PLD byproducts
+*.chp
+*.fus
+*.jed
+*.pin
+
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
